--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ div.my-carousel-container{
     min-width: 800px ;
     max-width: 1350px;
     margin: 0 auto;
+    outline: none;
     /* background-color: aquamarine; */
 }
 
